--- a/src/index.html
+++ b/src/index.html
@@ -9,27 +9,28 @@
 
 <body>
     <div id="root">
-        <div class="content-wrapper">
-            <header>
-                <div class="flex justify-between  bg-blue-200 shadow-sm">
-                    <img src="../assets/avatar.jpg" alt="no" class="w-10 h-10 relative">
-                    </i>
-                    <nav class="">
-                        <a href="">
-                            home
-                        </a>
-                        <a href="">
-                            about
-                        </a>
-
-                        <a href="">
-                            exercise
-                        </a>
-                        <a href="#footer">
-                            contact
-                        </a>
-                    </nav>
-                </div>
+        <div class="content-wrapper max-w-screen-2xl text-base mx-auto px-8 bg-slate-400 font-serif">
+            <header class="py-6 mx-10">
+                <nav class="flex flex-row justify-between items-center ">
+                    <div class="logo basis-1/3 text-center text-xl font-semibold cursor-pointer">DoQuangTrieu</div>
+                    <ul
+                        class=" basis-2/3 flex items-center justify-center gap-16 uppercase text-sm font-medium text-gray-500">
+                        <li class="ct-top-menu-item">
+                            <a href="#" class="">
+                                home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="ct-top-menu-item"> about </a>
+                        </li>
+                        <li>
+                            <a href="#" class="ct-top-menu-item"> exercise </a>
+                        </li>
+                        <li>
+                            <a href="#" class="ct-top-menu-item"> contact </a>
+                        </li>
+                    </ul>
+                </nav>
             </header>
             <main>
                 main
